--- a/findly-builder/src/app/helpers/components/upgrade-plan/upgrade-plan.component.scss
+++ b/findly-builder/src/app/helpers/components/upgrade-plan/upgrade-plan.component.scss
@@ -68,9 +68,9 @@
                                         display: none;
                                     }
                                 }
-                                .goto_details{
-                                    display: block;
-                                }
+                                // .goto_details{
+                                //     display: block;
+                                // }
                             }                            
                         }
                         .main-content{
