Emoji changes in Search Experience. Changed svg images to png.

--- a/findly-builder/src/app/components/search-experience/search-experience.component.scss
+++ b/findly-builder/src/app/components/search-experience/search-experience.component.scss
@@ -669,6 +669,7 @@
                                                     display: inline-block;
                                                     width: 22px;
                                                     height: 22px;
+                                                    cursor: pointer;
                                                 }
                                             }
                                         }
