--- a/findly-builder/src/app/components/search-experience/search-experience.component.html
+++ b/findly-builder/src/app/components/search-experience/search-experience.component.html
@@ -346,87 +346,26 @@
                         <div class="greeting-message border-with-padding border-0 col-7 pb-0">
                             <div class="kr-sg-input-text-area">
                                 <div class="label-text">Customize Launch Greeting Message</div>
-                                <textarea class="input-text" maxlength="40" #box (keyup)="0" [(ngModel)]="searchObject.searchInteractionsConfig.welcomeMsg" [ngStyle]="{'color':searchObject.searchInteractionsConfig.welcomeMsgColor}"></textarea>                                
+                                <textarea class="input-text" maxlength="40" #box (keyup)="0" [(ngModel)]="searchObject.searchInteractionsConfig.welcomeMsg" [ngStyle]="{'color':searchObject.searchInteractionsConfig.welcomeMsgColor}"></textarea>
                             </div>
                             <div class="emojis-block">
                                 <!-- <div class="emoji-img"><label for="myFileInput"><img [src]="emojiIcon" width="18" height="18">
                                     <input type="file" style="display: none;" id="myFileInput" (change)="selectIcon($event,'emoji','auto')" /></label>
                                 </div>                                 -->
                                 <div class="emoji-img">
-                                    <div class="kr-sg-dropdowns" ngbDropdown [placement]="'right-top'">
+                                    <div class="kr-sg-dropdowns" ngbDropdown [placement]="'right-top'" id="avatarDropdown">
                                         <div class="dropdown dropdown-open">
                                             <button class="dropdown-toggle dropdown-input before-none" ngbDropdownToggle>
                                                 <img [src]="emojiIcon" width="18" height="18">
                                             </button>
-                                            <ul class="dropdown-menu content-menu" ngbDropdownMenu>
+                                            <ul class="dropdown-menu content-menu" ngbDropdownMenu >
                                                <div class="emojis-images-block">
-                                                   <div class="close-btn">
+                                                   <div class="close-btn" (click)="closeEmojiPicker()">
                                                        <img src="assets/icons/search-experience/emojis/close.svg">
                                                    </div>
-                                                    <li class="emoji-type">
-                                                        <img src="assets/icons/search-experience/emojis/smile.svg">
+                                                    <li class="emoji-type" *ngFor="let emoji of emojiList" (click)="emojiIcon = emoji.img_src; emojiIconUpload('update')">
+                                                        <img [src]="emoji.img_src" [alt]="emoji.value">
                                                     </li>
-                                                    <li class="emoji-type">
-                                                        <img src="assets/icons/search-experience/emojis/smile-2.svg">
-                                                    </li>
-                                                    <li class="emoji-type">
-                                                        <img src="assets/icons/search-experience/emojis/smile-3.svg">
-                                                    </li>
-                                                    <li class="emoji-type">
-                                                        <img src="assets/icons/search-experience/emojis/smile-4.svg">
-                                                    </li>
-                                                    <li class="emoji-type">
-                                                        <img src="assets/icons/search-experience/emojis/smile-5.svg">
-                                                    </li>
-                                                    <li class="emoji-type">
-                                                        <img src="assets/icons/search-experience/emojis/smile-6.svg">
-                                                    </li>
-                                                    <li class="emoji-type">
-                                                        <img src="assets/icons/search-experience/emojis/cat-img.svg">
-                                                    </li>
-                                                    <li class="emoji-type">
-                                                        <img src="assets/icons/search-experience/emojis/love.svg">
-                                                    </li>
-                                                    <li class="emoji-type">
-                                                        <img src="assets/icons/search-experience/emojis/hand.svg">
-                                                    </li>                                                    
-                                                    <li class="emoji-type">
-                                                        <img src="assets/icons/search-experience/emojis/hand-1.svg">
-                                                    </li>
-                                                    <li class="emoji-type">
-                                                        <img src="assets/icons/search-experience/emojis/hand-2.svg">
-                                                    </li>
-                                                    <li class="emoji-type">
-                                                        <img src="assets/icons/search-experience/emojis/poke.svg">
-                                                    </li>
-                                                    <li class="emoji-type">
-                                                        <img src="assets/icons/search-experience/emojis/thubsup.svg">
-                                                    </li>
-                                                    <li class="emoji-type">
-                                                        <img src="assets/icons/search-experience/emojis/welcome.svg">
-                                                    </li>
-                                                    <li class="emoji-type">
-                                                        <img src="assets/icons/search-experience/emojis/men-avatar.svg">
-                                                    </li>
-                                                    <li class="emoji-type">
-                                                        <img src="assets/icons/search-experience/emojis/woment-avatar.svg">
-                                                    </li>
-                                                    <li class="emoji-type">
-                                                        <img src="assets/icons/search-experience/emojis/old-women.svg">
-                                                    </li>
-                                                    <li class="emoji-type">
-                                                        <img src="assets/icons/search-experience/emojis/old-men.svg">
-                                                    </li>
-                                                    <li class="emoji-type">
-                                                        <img src="assets/icons/search-experience/emojis/monkey.svg">
-                                                    </li>
-                                                    <li class="emoji-type">
-                                                        <img src="assets/icons/search-experience/emojis/monkey-1.svg">
-                                                    </li>
-                                                    <li class="emoji-type">
-                                                        <img src="assets/icons/search-experience/emojis/monkey-1.svg">
-                                                    </li>
-                                                   
                                                </div>
                                             </ul>
                                         </div>
@@ -471,21 +410,25 @@
                         <div class="col-12 preview-search-ex">
                             <div class="search-widget-if-bottom-up" *ngIf="searchObject.searchExperienceConfig.searchBarPosition == 'bottom'">                               
                                 <div class="greeting-block">
-                                    <img src="assets/icons/search-experience/emojis/hand.svg">
-                                    <span class="greeting-title">Good morning! How can I help you today?</span>
+                                    <img [src]="emojiIcon">
+                                    <span class="greeting-title">{{searchObject.searchInteractionsConfig.welcomeMsg}}</span>
                                 </div>
                                 <div class="d-flex search-customization-input">
                                     <div class="kr-sg-input-search">                               
                                         <input type="text" class="input-search" [ngStyle]="{'background':searchObject.searchWidgetConfig.searchBarFillColor,'border-color':searchObject.searchWidgetConfig.searchBarBorderColor}" readonly>
                                         <img [src]="searchIcon" class="search-icon" height="15" width="15">
-                                         <span class="placeholder-text" [ngStyle]="{'color':searchObject.searchWidgetConfig.searchBarPlaceholderTextColor}">{{searchObject.searchWidgetConfig.searchBarPlaceholderText}}</span>
-                                         <button class="btn-customize kr-sg-button-primary read-mode btn_lg inside-input-btn" [ngStyle]="{'background':searchObject.searchWidgetConfig.buttonFillColor,'border-color':searchObject.searchWidgetConfig.buttonBorderColor,'color':searchObject.searchWidgetConfig.buttonTextColor}" *ngIf="(searchObject.searchExperienceConfig.searchBarPosition==='top' && searchObject.searchWidgetConfig.buttonPlacementPosition==='inside') || searchObject.searchExperienceConfig.searchBarPosition === 'bottom'">
-                                            <span>{{searchObject.searchWidgetConfig.buttonText}}</span>
-                                        </button>  
+                                        <span class="placeholder-text" [ngStyle]="{'color':searchObject.searchWidgetConfig.searchBarPlaceholderTextColor}">{{searchObject.searchWidgetConfig.searchBarPlaceholderText}}</span>
+                                        <ng-container *ngIf="searchObject.searchWidgetConfig.searchButtonEnabled">
+                                            <button class="btn-customize kr-sg-button-primary read-mode btn_lg inside-input-btn" [ngStyle]="{'background':searchObject.searchWidgetConfig.buttonFillColor,'border-color':searchObject.searchWidgetConfig.buttonBorderColor,'color':searchObject.searchWidgetConfig.buttonTextColor}" *ngIf="(searchObject.searchExperienceConfig.searchBarPosition==='top' && searchObject.searchWidgetConfig.buttonPlacementPosition==='inside') || searchObject.searchExperienceConfig.searchBarPosition === 'bottom'">
+                                                <span>{{searchObject.searchWidgetConfig.buttonText}}</span>
+                                            </button>
+                                        </ng-container>
                                     </div>
-                                    <button class="btn-customize kr-sg-button-primary read-mode btn_lg" [ngStyle]="{'background':searchObject.searchWidgetConfig.buttonFillColor,'border-color':searchObject.searchWidgetConfig.buttonBorderColor,'color':searchObject.searchWidgetConfig.buttonTextColor}" *ngIf="searchObject.searchExperienceConfig.searchBarPosition==='top' && searchObject.searchWidgetConfig.buttonPlacementPosition === 'outside'">
-                                        <span>{{searchObject.searchWidgetConfig.buttonText}}</span>                                       
-                                    </button>
+                                    <ng-container *ngIf="searchObject.searchWidgetConfig.searchButtonEnabled">
+                                        <button class="btn-customize kr-sg-button-primary read-mode btn_lg" [ngStyle]="{'background':searchObject.searchWidgetConfig.buttonFillColor,'border-color':searchObject.searchWidgetConfig.buttonBorderColor,'color':searchObject.searchWidgetConfig.buttonTextColor}" *ngIf="searchObject.searchExperienceConfig.searchBarPosition==='top' && searchObject.searchWidgetConfig.buttonPlacementPosition === 'outside'">
+                                            <span>{{searchObject.searchWidgetConfig.buttonText}}</span>                                       
+                                        </button>
+                                    </ng-container>
                                 </div>
                             </div>
                             <div class="search-widget" *ngIf="searchObject.searchExperienceConfig.searchBarPosition == 'top'">                               
@@ -493,18 +436,22 @@
                                     <div class="kr-sg-input-search">                               
                                         <input type="text" class="input-search" [ngStyle]="{'background':searchObject.searchWidgetConfig.searchBarFillColor,'border-color':searchObject.searchWidgetConfig.searchBarBorderColor}" readonly>
                                         <img [src]="searchIcon" class="search-icon" height="15" width="15">
-                                         <span class="placeholder-text" [ngStyle]="{'color':searchObject.searchWidgetConfig.searchBarPlaceholderTextColor}">{{searchObject.searchWidgetConfig.searchBarPlaceholderText}}</span>
-                                         <button class="btn-customize kr-sg-button-primary read-mode btn_lg inside-input-btn" [ngStyle]="{'background':searchObject.searchWidgetConfig.buttonFillColor,'border-color':searchObject.searchWidgetConfig.buttonBorderColor,'color':searchObject.searchWidgetConfig.buttonTextColor}" *ngIf="(searchObject.searchExperienceConfig.searchBarPosition==='top'&&searchObject.searchWidgetConfig.buttonPlacementPosition==='inside')||searchObject.searchExperienceConfig.searchBarPosition==='bottom'">
-                                            <span>{{searchObject.searchWidgetConfig.buttonText}}</span>
-                                        </button>  
+                                        <span class="placeholder-text" [ngStyle]="{'color':searchObject.searchWidgetConfig.searchBarPlaceholderTextColor}">{{searchObject.searchWidgetConfig.searchBarPlaceholderText}}</span>
+                                        <ng-container *ngIf="searchObject.searchWidgetConfig.searchButtonEnabled">
+                                            <button class="btn-customize kr-sg-button-primary read-mode btn_lg inside-input-btn" [ngStyle]="{'background':searchObject.searchWidgetConfig.buttonFillColor,'border-color':searchObject.searchWidgetConfig.buttonBorderColor,'color':searchObject.searchWidgetConfig.buttonTextColor}" *ngIf="(searchObject.searchExperienceConfig.searchBarPosition==='top'&&searchObject.searchWidgetConfig.buttonPlacementPosition==='inside')||searchObject.searchExperienceConfig.searchBarPosition==='bottom'">
+                                                <span>{{searchObject.searchWidgetConfig.buttonText}}</span>
+                                            </button>
+                                        </ng-container>
                                     </div>
-                                    <button class="btn-customize kr-sg-button-primary read-mode btn_lg" [ngStyle]="{'background':searchObject.searchWidgetConfig.buttonFillColor,'border-color':searchObject.searchWidgetConfig.buttonBorderColor,'color':searchObject.searchWidgetConfig.buttonTextColor}" *ngIf="searchObject.searchExperienceConfig.searchBarPosition==='top'&&searchObject.searchWidgetConfig.buttonPlacementPosition==='outside'">
-                                        <span>{{searchObject.searchWidgetConfig.buttonText}}</span>                                       
-                                    </button>
+                                    <ng-container *ngIf="searchObject.searchWidgetConfig.searchButtonEnabled">
+                                        <button class="btn-customize kr-sg-button-primary read-mode btn_lg" [ngStyle]="{'background':searchObject.searchWidgetConfig.buttonFillColor,'border-color':searchObject.searchWidgetConfig.buttonBorderColor,'color':searchObject.searchWidgetConfig.buttonTextColor}" *ngIf="searchObject.searchExperienceConfig.searchBarPosition==='top'&&searchObject.searchWidgetConfig.buttonPlacementPosition==='outside'">
+                                            <span>{{searchObject.searchWidgetConfig.buttonText}}</span>                                       
+                                        </button>
+                                    </ng-container>
                                 </div>
                                 <div class="greeting-block">
-                                    <img src="assets/icons/search-experience/emojis/hand.svg">
-                                    <span class="greeting-title">Good morning! How can I help you today?</span>
+                                    <img [src]="emojiIcon">
+                                    <span class="greeting-title">{{searchObject.searchInteractionsConfig.welcomeMsg}}</span>
                                 </div>
                             </div>
                         </div>
