--- a/findly-builder/src/app/helpers/components/upgrade-plan/upgrade-plan.component.html
+++ b/findly-builder/src/app/helpers/components/upgrade-plan/upgrade-plan.component.html
@@ -1,4 +1,5 @@
-<kr-modal modalType="center" modalClass="modal_popups_ chooseplan-price" #addPricingModel3>
+<!--choose plan popup-->
+<kr-modal modalType="center" modalClass="modal_popups_ chooseplan-price" #choosePlanModel>
     <div class="modal-header">
       <div class="title">Choose Plan</div>
       <div class="d-flex align-items-center justify-content-end">
@@ -19,7 +20,8 @@
                 <img src="assets/icons/pricing/standard.svg" class="standard-img">
                   <div class="title-sec">
                     <div class="title">{{plan.name}}</div>
-                    <div class="price" [ngClass]='{"d-none":currentPlan===plan.name}'>${{plan.planAmount}} <span>/ {{termPlan==='Monthly'?'month':'year'}}</span></div>
+                    <div class="price" [ngClass]='{"d-none":currentPlan===plan.name||plan.name=="Enterprise"}'>${{plan.planAmount}} <span>/ {{termPlan==='Monthly'?'month':'year'}}</span></div>
+                    <div class="price" [ngClass]='{"d-none":plan.name!="Enterprise"}'>Custom</div>
                     <div class="current-plan-title" *ngIf="currentPlan===plan.name"><img src="assets/icons/pricing/check-round.svg">Current Plan</div>
                   </div>
                   <div class="card-desc">10k Documents </div>
@@ -27,7 +29,7 @@
                   <div class="card-desc">Scheduled Crawling</div>
                   <div class="card-desc">Experiments</div>
                   <div class="card-desc">Community Support</div>
-                  <button class="kr-sg-button-secondary btn_lg">Choose Plan</button>
+                  <button class="kr-sg-button-secondary btn_lg">{{plan.name==='Enterprise'?'Contact Us':'Choose Plan'}}</button>
               </div>
               <div class="goto_details" (click)="showPlanDetails = plan.name">Go to Details</div>
             </div>
@@ -71,18 +73,16 @@
           </div> -->
         </div>
 
-        <div class="choose-plan-data-table if-standard">
-         <!-- if-free, if-standard, if-pro, if-enterprise   add this classes based on type selected-->
-          <div class="header-table-plan row m-0" *ngFor="let planInfo of filterPlansData">
+        <div class="choose-plan-data-table if-standard d-none">
+         <!-- if-free, if-standard, if-pro, if-enterprise   add this classes based on type selected--> 
+         <div class="header-table-plan row m-0">
             <div class="type-title width-24">
               
             </div>
             <div class="type-title width-19">
-              <div class="title">{{planInfo.planAmount}}</div>  
-              <div class="plan-duration">${{planInfo.name}} / month </div>
-              <button class="kr-sg-button-secondary btn_lg" *ngIf="planInfo.name!=='free'">Choose Plan</button>          
+              <div class="title">Free</div>  
             </div>
-            <!-- <div class="type-title width-19">
+            <div class="type-title width-19">
               <div class="title">Standard</div>
               <div class="plan-duration">$99 / month </div>
               <button class="kr-sg-button-secondary btn_lg">Choose Plan</button>
@@ -96,7 +96,7 @@
               <div class="title">Enterprise</div>
               <div class="plan-duration">Custom Pricing </div>
               <button class="kr-sg-button-secondary btn_lg">Choose Plan</button>
-            </div> -->
+            </div>
           </div>
 
           <div class="body-content-plan">
@@ -156,4 +156,53 @@
       <button class="kr-sg-button-primary btn_lg mr-3">Proceed</button>
       <button class="kr-sg-button-secondary backbtn btn_md mr-2" (click)="closePopup3()">Cancel</button>
     </div> -->
+</kr-modal>
+
+<!--order confirm popup-->
+<kr-modal modalType="center" modalClass="modal_popups_ order-confirmation" #orderConfirmModel>
+  <div class="modal-header">
+    <div class="title">Order Confirmation</div>
+    <div class="close_icon"><img (click)="closeOrderConfPopup()" src="assets/icons/modal-close.svg"></div>
+  </div>
+  <perfect-scrollbar>
+    <div class="modal-body">
+      <div class="plan-desc">You are Subscribing to <span>Standard Plan</span>. Please find the order summary below.</div>
+      <div class="order-confirmation-table">
+        <div class="order-confirmation-table-header row col-12 m-0">
+          <div class="title col-9">PLAN</div>
+          <div class="title col-3">AMOUNT</div>
+        </div>
+        <div class="order-confirmation-table-body row col-12 m-0">
+          <div class="col-9 plan_details">
+            <div class="plan-type">Standard Subscription</div>
+            <div class="btn-monthly"  [ngClass]="{'active-btn' : termPlan == 'monthly'}" (click)="termPlan = 'monthly'">Monthly</div>
+            <div class="btn-monthly" [ngClass]="{ 'active-btn' : termPlan == 'annually' }" (click)="termPlan = 'annually'">Annually</div>
+          </div>            
+
+          <div class="amount col-3">$ 99</div>
+        </div>
+        <!-- <div class="order-confirmation-table-body row col-12 m-0">             
+          <div class="col-9 plan_details">
+            <div class="plan-type">Document Overage</div>
+            <div class="add-doc-btn-sec">
+              <div class="minus"><img src="assets/icons/pricing/minus-small.svg"></div>
+              <div class="increase-num">1</div>
+              <div class="plus"><img src="assets/icons/pricing/plus-small.svg"></div>
+            </div>
+            <div class="amount-increased">10 k</div>
+          </div>
+
+          <div class="amount col-3">$ 99</div>
+        </div> -->
+        <div class="order-confirmation-table-body row col-12 m-0">
+          <div class="col-9 total-amount text-right">Total Amount</div>
+          <div class="amount col-3">$ 99</div>
+        </div>
+      </div>
+    </div>
+  </perfect-scrollbar>
+  <div class="modal-footer text-right">
+    <button class="kr-sg-button-primary btn_lg" (click)="openPopup2()">Pay</button>
+    <button class="kr-sg-button-secondary backbtn btn_md" (click)="closeOrderConfPopup()">Cancel</button>
+  </div>
 </kr-modal>
