--- a/findly-builder/src/app/components/search-experience/search-experience.component.html
+++ b/findly-builder/src/app/components/search-experience/search-experience.component.html
@@ -19,12 +19,12 @@
                 <div class="experience-tab">
                     <div class="left-sec">
                         <div class="kr-sg-radiobutton d-block plr-0 mb-4">
-                            <input id="radio-2" name="topdown" value='top' class="radio-custom" type="radio" [(ngModel)]="searchObject.searchExperienceConfig.searchBarPosition" (click)="changeSlider('top-down')">
+                            <input id="radio-2" name="topdown" value='top' class="radio-custom" type="radio" [(ngModel)]="searchObject.searchExperienceConfig.searchBarPosition" (click)="changeSlider('top')">
                             <label for="radio-2" class="radio-custom-label">Top Down</label>
                             <div class="desc-tect">Search Bar at the top</div>
                         </div>   
                         <div class="kr-sg-radiobutton d-block plr-0 mb-4">
-                            <input id="radio-22" name="bottomup" value='bottom' class="radio-custom" type="radio" [(ngModel)]="searchObject.searchExperienceConfig.searchBarPosition" (click)="changeSlider('bottom-up')">
+                            <input id="radio-22" name="bottomup" value='bottom' class="radio-custom" type="radio" [(ngModel)]="searchObject.searchExperienceConfig.searchBarPosition" (click)="changeSlider('bottom')">
                             <label for="radio-22" class="radio-custom-label">Bottom Up</label>
                             <div class="desc-tect">Search Bar at the bottom</div>
                         </div>   
@@ -411,7 +411,7 @@
                             <div class="search-widget-if-bottom-up" *ngIf="searchObject.searchExperienceConfig.searchBarPosition == 'bottom'">                               
                                 <div class="greeting-block">
                                     <img [src]="emojiIcon">
-                                    <span class="greeting-title">{{searchObject.searchInteractionsConfig.welcomeMsg}}</span>
+                                    <span class="greeting-title" [ngStyle]="{'color':searchObject.searchInteractionsConfig.welcomeMsgColor}">{{searchObject.searchInteractionsConfig.welcomeMsg}}</span>
                                 </div>
                                 <div class="d-flex search-customization-input">
                                     <div class="kr-sg-input-search">                               
@@ -451,7 +451,7 @@
                                 </div>
                                 <div class="greeting-block">
                                     <img [src]="emojiIcon">
-                                    <span class="greeting-title">{{searchObject.searchInteractionsConfig.welcomeMsg}}</span>
+                                    <span class="greeting-title" [ngStyle]="{'color':searchObject.searchInteractionsConfig.welcomeMsgColor}">{{searchObject.searchInteractionsConfig.welcomeMsg}}</span>
                                 </div>
                             </div>
                         </div>
@@ -533,7 +533,7 @@
     </div>
     <perfect-scrollbar class="perfect-scroll-modal-body">
       <div class="modal-body" *ngIf="searchObject.searchExperienceConfig.searchBarPosition == 'bottom'">
-        <div class="main-title">Hi Ankit,</div>
+        <div class="main-title">Hi {{userName}},</div>
         <div class="main-title">It is recommended to go through this guide before customizing interactions.</div>
         <div class="guide-data">
             <div class="layer-img">
