--- a/findly-builder/src/app/components/app-experiments/app-experiments.component.scss
+++ b/findly-builder/src/app/components/app-experiments/app-experiments.component.scss
@@ -684,3 +684,17 @@
   }
 }
 
+
+
+.upgrade-experience{
+  width: 586px;
+  margin: 0 auto;
+  text-align: center;
+  .title{
+    color: #202124;
+    font-weight: 600;
+    font-size: 18px;
+    line-height: 20px;
+    margin: 30px 0;
+  }
+}
