pay pro iframe height issue fixed

--- a/findly-builder/src/app/helpers/components/upgrade-plan/upgrade-plan.component.scss
+++ b/findly-builder/src/app/helpers/components/upgrade-plan/upgrade-plan.component.scss
@@ -291,5 +291,8 @@
                 }
             }
         }
+        .payrro-iframe{
+            height: calc(100vh - 175px);
+        }
     }
 }
