--- a/findly-builder/src/app/helpers/components/upgrade-plan/upgrade-plan.component.html
+++ b/findly-builder/src/app/helpers/components/upgrade-plan/upgrade-plan.component.html
@@ -217,13 +217,16 @@
       </div>
     </div>      
   </div>
-  <perfect-scrollbar>
+  <div class="payrro-iframe">
+    <iframe width="100%" height="100%" frameBorder="0" [src]="urlSafe"></iframe>
+  </div>
+  <!-- <perfect-scrollbar>
     <div class="modal-body">
-      <!-- <div class="mian-title-desc">You can add maximum of 2 Business Rules in your current plan, Please Upgrade the plan to add more.</div> -->
-      <!-- <iframe src="{{ payementResponse.hostedPage.url }}" width="100%" height="100%" frameborder="0"></iframe> -->
-      <iframe width="100%" height="100%" frameBorder="0" [src]="urlSafe"></iframe>
+      <div class="mian-title-desc">You can add maximum of 2 Business Rules in your current plan, Please Upgrade the plan to add more.</div>
+      <iframe src="{{ payementResponse.hostedPage.url }}" width="100%" height="100%" frameborder="0"></iframe>
+      
     </div>
-  </perfect-scrollbar>
+  </perfect-scrollbar> -->
   <div class="modal-footer text-right">
     <button class="kr-sg-button-primary btn_lg mr-3" (click)="openSuccessFailurePopup()">Proceed</button>
     <button class="kr-sg-button-secondary backbtn btn_md mr-2" (click)="closePaymentGatewayPopup()">Back</button>
