--- a/findly-builder/src/app/components/structured-data-status-modal/structured-data-status-modal.component.scss
+++ b/findly-builder/src/app/components/structured-data-status-modal/structured-data-status-modal.component.scss
@@ -15,8 +15,9 @@
             }
         }
         .modal-body{
-            padding: 45px 35px;
+            padding: 50px 35px;
             background: #EFF0F1;
+            height: 400px;
             .configInProgress{
                 margin-bottom: 28px;
             }
