--- a/findly-builder/src/app/shared/kr-modal/kr-modal.component.scss
+++ b/findly-builder/src/app/shared/kr-modal/kr-modal.component.scss
@@ -8,6 +8,12 @@
     text-align: center;
     padding: 0!important;
     z-index: 10500;
+    &.width-700{
+        .modal-dialog{
+            max-width: 700px !important;
+            width: 700px !important;
+        }
+    }
     &:before {
         content: '';
         display: inline-block;
